# Socratic-agents

./: .gitignore  CHANGELOG.md  COMPONENT2_IMPLEMENTATION.md  LICENSE  MODULARITY_ANALYSIS.md  PLAN.md  README.md  SKILLGENERATOR_PHASE1_COMPLETION.md  SKILLGENERATOR_PHASE1_PLAN.md  SKILLGENERATOR_PHASE2_COMPLETION.md  SKILLGENERATOR_PHASE2_PLAN.md  SKILLGENERATOR_PHASE3_PLAN.md  SKILLGENERATOR_PHASE4_PLAN.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  tests.yml
examples/: 01_basic_agent_usage.py  01_standalone_usage.py  02_openclaw_integration.py  02_with_nexus.py  03_agent_composition.py  03_langchain_integration.py  04_async_basic.py  05_async_with_llm.py  06_llm_powered_workflow.py  phase6_version_management.py  skill_generator_example.py
src/socratic_agents/: __init__.py  llm_agents.py
src/socratic_agents/agents/: __init__.py  base.py  code_generator.py  code_validation_agent.py  conflict_detector.py  context_analyzer.py  document_context_analyzer.py  document_processor.py  github_sync_handler.py  knowledge_analysis.py  knowledge_manager.py  learning_agent.py  multi_llm_agent.py  note_manager.py  project_manager.py  quality_controller.py  question_queue_agent.py  skill_generator_agent.py  skill_generator_agent_v2.py  socratic_counselor.py  system_monitor.py  user_manager.py
src/socratic_agents/analytics/: __init__.py  analytics_module.py  effectiveness_trend_analyzer.py  skill_interaction_tracker.py  skill_parameter_optimizer.py  skill_recommendation_predictor.py
src/socratic_agents/integrations/: __init__.py  skill_orchestrator.py
src/socratic_agents/models/: __init__.py  skill_models.py
src/socratic_agents/skill_generation/: __init__.py  compatibility_checker.py  llm_skill_generator.py  skill_composition.py  skill_prompt_engine.py  skill_validation_engine.py  skill_version_manager.py  workflow_orchestrator.py  workflow_skill.py
tests/: conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_agent_performance.py  test_memory_usage.py  test_skill_generation_benchmark.py
tests/integration/: test_analytics_integration.py  test_integrations.py  test_skill_generator_integration.py  test_skill_integration.py  test_version_workflow.py
tests/unit/: test_agents.py  test_analytics_module.py  test_async_agents.py  test_effectiveness_trend_analyzer.py  test_llm_agents.py  test_skill_generator.py  test_skill_interaction_tracker.py  test_skill_parameter_optimizer.py  test_skill_recommendation_predictor.py
tests/unit/test_skill_generation/: __init__.py  test_compatibility_checker.py  test_llm_skill_generator.py  test_skill_composition.py  test_workflow_skill.py  (+5 more)
(+4 files in other folders)
